Fix application properties update097